@@ -80,6 +80,8 @@ multi-signature generation
 46. dk-filter.sh: set environment variables set in dkimkeys control file
 - 18/02/2023
 47. sys-checkpwd.c: replaced strerr_warn with subprintf
+- 19/02/2023
+48. dk-filter.sh: added unset variables feature of dkimkeys
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
